Compositing displace node #44398

Closed
opened 2015-04-15 12:41:35 +02:00 by arild andersson · 10 comments

The compositing displace node can not be limited to an area, it always displaces the whole image half a pixel or bluring all of it slightly.
(Even as the x and y scale are set to 0.5)
I am using 2.74 hash 000dfc0

Arild

Linux mint 17 64bit
i7 cpu x980
gpu quadro 4000

The compositing displace node can not be limited to an area, it always displaces the whole image half a pixel or bluring all of it slightly. (Even as the x and y scale are set to 0.5) I am using 2.74 hash 000dfc0 Arild Linux mint 17 64bit i7 cpu x980 gpu quadro 4000

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @urildt

Added subscriber: @urildt
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Hey @urildt,
Not really sure what you mean, could you describe exact steps to reproduce this, what you see and what you expected to see instead?

Hey @urildt, Not really sure what you mean, could you describe exact steps to reproduce this, what you see and what you expected to see instead?

Hi @JulianEisel
Sorry for the unclear bugreport.
I'll upload a blendfile.

This is what I've done

  1. Create an uvgrid image
  2. Connect it to the displace node in the compositor
  3. Set the vectors in the displace node to x:1 y:1 z:0
  4. Add an eclipse mask with an value of 1 and a grey background ( 0.5)
  5. The the uvgrid is displaced as expected according to the eclipse mask.
  6. The whole image is also affected. Watch closely at the border of the image ( sqaure E1 for example) while you mute/unmute. The image gets a little bit fuzzy when the displace node is enabled. See closeup image displace

displace_BuG.blend

Arild

Hi @JulianEisel Sorry for the unclear bugreport. I'll upload a blendfile. This is what I've done 1. Create an uvgrid image 2. Connect it to the displace node in the compositor 3. Set the vectors in the displace node to x:1 y:1 z:0 4. Add an eclipse mask with an value of 1 and a grey background ( 0.5) 5. The the uvgrid is displaced as expected according to the eclipse mask. 6. The whole image is also affected. Watch closely at the border of the image ( sqaure E1 for example) while you mute/unmute. The image gets a little bit fuzzy when the displace node is enabled. See closeup image [displace ](http://i.imgur.com/solez4j.png) [displace_BuG.blend](https://archive.blender.org/developer/F163365/displace_BuG.blend) Arild
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Ah can see now what you mean. The issue becomes much more visible with a bit more extreme vector values like 20/20/20 Screenshot_from_2015-04-21_19:24:31.png @Sergey mind having a look on this one?

Ah can see now what you mean. The issue becomes much more visible with a bit more extreme vector values like 20/20/20 ![Screenshot_from_2015-04-21_19:24:31.png](https://archive.blender.org/developer/F165113/Screenshot_from_2015-04-21_19_24_31.png) @Sergey mind having a look on this one?

This issue was referenced by 7c2905b8ec

This issue was referenced by 7c2905b8ec6fb2a8f4929c1f0b631a8b9d391c03

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7c2905b8ec.

Closed by commit 7c2905b8ec.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44398
No description provided.